update doc and test
